# SoftRenderer

./: .gitmodules  CMakeLists.txt  README.md
SoftRendererApp/: CMakeLists.txt
SoftRendererApp/form/: QtSoftRendererMainWindow.ui  QuiSoftRendererMainWindow.ui
SoftRendererApp/include/: QtSoftRendererMainWindow.h  QuiSoftRendererMainWindow.h
SoftRendererApp/include/algorithm/: QtMathLibrary.h
SoftRendererApp/include/core/: QtColor.h  QtConfig.h  QtCore.h  QtImage.h  QtPoint.h  QtRect.h
SoftRendererApp/include/render/: QtCanvas.h  QtFrameBuffer.h  QtPaint.h  QtRender.h
SoftRendererApp/source/: QtSoftRendererMainWindow.cpp  QuiSoftRendererMainWindow.cpp  main.cpp
SoftRendererApp/source/algorithm/: QtMathLibrary.cpp
SoftRendererApp/source/core/: QtColor.cpp  QtImage.cpp  QtPoint.cpp  QtRect.cpp
SoftRendererApp/source/render/: QtCanvas.cpp  QtFrameBuffer.cpp  QtPaint.cpp  QtRender.cpp
